# CONFER-WP3

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: main.yaml
data/: onset_colors.npz  tercile_colors.npz
notebooks/: downscaling_example.ipynb  example_notebook.ipynb  factor_loadings.nc  lasso_fcst_example.ipynb  lasso_fcst_validation.ipynb  onset_cross_validated.ipynb  onset_example.ipynb
scripts/: aggregate_imerg_data.py  aggregate_rfe2_data.py  compose_wrf_lagged_ensemble.py  example_script.py
src/confer_wp3/: __init__.py  dataloading.py  downscaling.py  glp.py  lasso_forecast.py  onset.py  plotting.py  upscale_chirps_pentads.py  utils.py  validation.py
testdata/: chirps_anomalies.nc  chirps_anomalies_normal.nc  fls.nc
tests/: TEST_README.md  test_example.py
